--- a/client/package.json
+++ b/client/package.json
@@ -73,6 +73,7 @@
     "npm-run-all": "^4.1.5",
     "puppeteer": "^1.15.0",
     "raw-loader": "^1.0.0",
+    "react-svg-loader": "^3.0.3",
     "react-test-renderer": "^16.8.6",
     "sinon": "^7.3.2",
     "sinon-chai": "^3.3.0",
