--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "del-cli": "^1.1.0",
     "diff2html": "^2.11.2",
     "electron": "^3.1.12",
-    "electron-builder": "20.28.4",
+    "electron-builder": "^22.1.0",
     "electron-devtools-installer": "^2.2.4",
     "electron-publisher-s3": "^20.17.2",
     "electron-reloader": "^0.2.0",
