--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "electron": "^3.1.12",
     "electron-builder": "^22.1.0",
     "electron-devtools-installer": "^2.2.4",
+    "electron-notarize": "^0.2.0",
     "electron-publisher-s3": "^20.17.2",
     "electron-reloader": "^0.2.0",
     "eslint": "^5.16.0",
